--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Rubik+Mono+One&display=swap" rel="stylesheet">
   <link href="responsive.css" rel="stylesheet" />
-  <link rel="icon" href="assets/favicon.ico" sizes="any">
+  <link rel="icon" href="favicon.ico" sizes="any">
 
 </head>
 <body class="state-feral">
