--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body class="state-feral">
   <nav id="topSocial" class="top-social" aria-label="Social links">
     <a href="https://t.me/MEME_SCHIZO" class="soc" aria-label="Telegram" title="Telegram"><img src="assets/icon-telegram.png" alt="Telegram"></a>
-    <a href="https://dexscreener.com/solana/coming_soon" class="soc" aria-label="Twitter/X" title="Dexscreener"><img src="assets/icon-twitter.png" alt="Twitter"></a>
-    <a href="https://x.com/MEME_SCHIZO" class="soc" aria-label="Twitter" title="Dexscreener"><img src="assets/icon-dex.png" alt="Dexscreener"></a>
+    <a href="https://x.com/MEME_SCHIZO" class="soc" aria-label="Twitter/X" title="Twitter"><img src="assets/icon-twitter.png" alt="Twitter"></a>
+    <a href="https://dexscreener.com/solana/coming_soon" class="soc" aria-label="Dexscreener" title="Dexscreener"><img src="assets/icon-dex.png" alt="Dexscreener"></a>
   </nav>
   <!-- Calm toggle -->
   <!-- Page 1 -->
