--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Rubik+Mono+One&display=swap" rel="stylesheet">
   <link href="responsive.css" rel="stylesheet" />
   <link rel="icon" href="favicon.ico" sizes="any">
-
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body class="state-feral">
   <nav id="topSocial" class="top-social" aria-label="Social links">
