--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
   <nav id="topSocial" class="top-social" aria-label="Social links">
     <a href="https://t.me/MEME_SCHIZO" class="soc" aria-label="Telegram" title="Telegram"><img src="assets/icon-telegram.png" alt="Telegram"></a>
     <a href="https://x.com/MEME_SCHIZO" class="soc" aria-label="Twitter/X" title="Twitter"><img src="assets/icon-twitter.png" alt="Twitter"></a>
-    <a href="https://dexscreener.com/solana/coming_soon" class="soc" aria-label="Dexscreener" title="Dexscreener"><img src="assets/icon-dex.png" alt="Dexscreener"></a>
+    <a href="https://dexscreener.com/solana/5Ym4TqBfWGYMiJpz4RxXUVnhyCMt2zrHncpN4zAUWaFM" class="soc" aria-label="Dexscreener" title="Dexscreener"><img src="assets/icon-dex.png" alt="Dexscreener"></a>
   </nav>
   <!-- Calm toggle -->
   <!-- Page 1 -->
   <section id="page1" class="page feral" data-bg="assets/bg-first.png" aria-label="Feral chaos hero">
     <div id="contractBar" class="contract-bar" role="group" aria-label="Contract and buy">
-      <code id="contractAddress" class="contract-code">coming_soon</code>
+      <code id="contractAddress" class="contract-code">5Ym4TqBfWGYMiJpz4RxXUVnhyCMt2zrHncpN4zAUWaFM</code>
       <button id="copyContract" class="btn btn-plain copy-btn" aria-label="Copy contract">COPY</button>
-      <a id="buyTop" class="btn btn-buy buy-top" href="https://jup.ag/swap?sell=So11111111111111111111111111111111111111112&buy=coming_soon" rel="noopener">BUY</a>
+      <a id="buyTop" class="btn btn-buy buy-top" href="https://jup.ag/swap?sell=So11111111111111111111111111111111111111112&buy=5Ym4TqBfWGYMiJpz4RxXUVnhyCMt2zrHncpN4zAUWaFM" rel="noopener">BUY</a>
     </div>
     <div class="content top-header">
       <h1 class="logo glitch">$SCHIZO</h1>
@@ -89,7 +89,7 @@
     <nav class="social">
       <a href="https://x.com/MEME_SCHIZO" aria-label="X">Scream (X)</a>
       <a href="https://t.me/MEME_SCHIZO" aria-label="Telegram">Echo (TG)</a>
-      <a href="https://dexscreener.com/solana/coming_soon" aria-label="Dexscreener">Dexscreener</a>
+      <a href="https://dexscreener.com/solana/5Ym4TqBfWGYMiJpz4RxXUVnhyCMt2zrHncpN4zAUWaFM" aria-label="Dexscreener">Dexscreener</a>
     </nav>
   </footer>
 
