--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SCHIZO</title>
-  <meta name="description" content="SCHIZO: the meme coin that forgot gravity." />
+  <title>PSYCHO</title>
+  <meta name="description" content="PSYCHO: the meme coin that forgot gravity." />
   <link href="style.css" rel="stylesheet" />
   <!-- Fun display fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
       <a id="buyTop" class="btn btn-buy buy-top" href="https://jup.ag/swap?sell=So11111111111111111111111111111111111111112&buy=5Ym4TqBfWGYMiJpz4RxXUVnhyCMt2zrHncpN4zAUWaFM" rel="noopener">BUY</a>
     </div>
     <div class="content top-header">
-      <h1 class="logo glitch">$SCHIZO</h1>
+      <h1 class="logo glitch">$PSYCHO</h1>
       <p class="tagline">Chaos‑first. <span class="strike">Logic</span> optional.</p>
       <div class="cta">
         <a id="buy1" class="btn btn-buy runaway" href="#nope" data-real-href="#buy">TOKENOMICS</a>
@@ -68,7 +68,7 @@
         <a id="chart" class="btn btn-plain real-cta" href="#" target="_blank" rel="noopener">Chart</a>
       </div>
     </div>
-    <img src="assets/shizo 3 beer.png" class="shizo sprite" alt="Schizo seated" />
+    <img src="assets/shizo 3 beer.png" class="shizo sprite" alt="Psycho seated" />
   </section>
 
   <!-- Whitepaper modal -->
