--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 </head>
 <body class="state-feral">
   <nav id="topSocial" class="top-social" aria-label="Social links">
-    <a href="https://t.me/MEME_SCHIZO" class="soc" aria-label="Telegram" title="Telegram"><img src="assets/icon-telegram.png" alt="Telegram"></a>
-    <a href="https://x.com/MEME_SCHIZO" class="soc" aria-label="Twitter/X" title="Twitter"><img src="assets/icon-twitter.png" alt="Twitter"></a>
+    <a href="https://t.me/DEGEN_PSYCHO" class="soc" aria-label="Telegram" title="Telegram"><img src="assets/icon-telegram.png" alt="Telegram"></a>
+    <a href="https://x.com/TRUE_PSYCHOMEME" class="soc" aria-label="Twitter/X" title="Twitter"><img src="assets/icon-twitter.png" alt="Twitter"></a>
     <a href="https://dexscreener.com/solana/5Ym4TqBfWGYMiJpz4RxXUVnhyCMt2zrHncpN4zAUWaFM" class="soc" aria-label="Dexscreener" title="Dexscreener"><img src="assets/icon-dex.png" alt="Dexscreener"></a>
   </nav>
   <!-- Calm toggle -->
@@ -87,8 +87,8 @@
       <span>gravity is a hater • math is a social construct • buttons lie • </span>
     </div>
     <nav class="social">
-      <a href="https://x.com/MEME_SCHIZO" aria-label="X">Scream (X)</a>
-      <a href="https://t.me/MEME_SCHIZO" aria-label="Telegram">Echo (TG)</a>
+      <a href="https://x.com/TRUE_PSYCHOMEME" aria-label="X">Scream (X)</a>
+      <a href="https://t.me/DEGEN_PSYCHO" aria-label="Telegram">Echo (TG)</a>
       <a href="https://dexscreener.com/solana/5Ym4TqBfWGYMiJpz4RxXUVnhyCMt2zrHncpN4zAUWaFM" aria-label="Dexscreener">Dexscreener</a>
     </nav>
   </footer>
